Fix audio recording